# SafeDrop

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  START_HERE.md  STATUS.md  pack_manifest.txt
.github/ISSUE_TEMPLATE/: agent_task.md  bug_report.md
Docs/: architecture.html  build.html  index.html  paper.html  research.html  roadmap.html  status.html
Docs/assets/: app.js  styles.css
Docs/downloads/: AGENTS.md  CODEX_MASTER_INSTRUCTIONS.md  DATA_MODEL.md  IMPLEMENTATION_SPRINTS.md  SafeDrop_50_Track_Master_Agenda.md  SafeDrop_IJRC_Design_Paper.docx  SafeDrop_IJRC_Submission_Checklist.md  tracks.json
codex/: API_SPEC.md  IMPLEMENTATION_SPRINTS.md  ISSUE_MAP.csv  SYSTEM_OVERVIEW.md  TEST_AND_EVAL_PLAN.md  THREAT_MODEL.md
codex/PROMPTS/: admin_ui_agent.md  bootstrap_agent.md  evidence_agent.md  formal_methods_agent.md  network_agent.md  release_agent.md  storage_agent.md
docs/: README.md  architecture.html  build.html  index.html  research.html  roadmap.html
docs/assets/: app.js  styles.css  tracks-data.js
paper/: SafeDrop_IJRC_Design_Paper.md
research/: SafeDrop_50_Track_Master_Agenda.csv  SafeDrop_Research_Bundles.md
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: audit_api.rs  download.rs  files.rs  health.rs  mod.rs  reachability.rs  shares.rs
src/evidence/: audit.rs  mod.rs  receipt.rs
src/network/: mod.rs  probe.rs  relay.rs
src/share/: mod.rs
src/storage/: chunk.rs  manifest.rs  mod.rs
tests/: health_test.rs  sprint2_test.rs  sprint3_test.rs
