[package]
name = "safedrop"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Home-hosted secure file sharing with proof-carrying delivery"
license = "MIT"
repository = "https://github.com/pinkysworld/SafeDrop"

[[bin]]
name = "safedrop"
path = "src/main.rs"

[dependencies]
axum = "0.8"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
